Bug 428813 - Not possible to open app
Summary: Not possible to open app
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.8.0
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Stefan Gerlach
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-08 00:33 UTC by Łukasz
Modified: 2020-11-08 17:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Łukasz 2020-11-08 00:33:54 UTC
SUMMARY LabPlot won't open again (only first loading window) after closing from full screen mode with alt+f4


STEPS TO REPRODUCE
1. Use full screen mode.
2. Close app with ALT+F4.
3. Try opening app.

OBSERVED RESULT
Not possible to open app again

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 10
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Alexander Semke 2020-11-08 11:12:41 UTC
To unblock you now, open the file C:\Users\<your_user_name>\AppData\Local\labplot2rc in the text editor, locate the line with 'geometry' (must be in the [MainWin] section) and remove it. Save the file and start LabPlot again.

We'll check how to fix this problem.
Comment 2 Łukasz 2020-11-08 12:05:07 UTC
(In reply to Alexander Semke from comment #1)
> To unblock you now, open the file
> C:\Users\<your_user_name>\AppData\Local\labplot2rc in the text editor,
> locate the line with 'geometry' (must be in the [MainWin] section) and
> remove it. Save the file and start LabPlot again.
> 
> We'll check how to fix this problem.

Thank you very much, it helped!
Comment 3 Stefan Gerlach 2020-11-08 17:16:05 UTC
Git commit 373fc93e1fb4d9a7b925807d3406d84447679d38 by Stefan Gerlach.
Committed on 08/11/2020 at 17:14.
Pushed by sgerlach into branch 'master'.

Fix full screen action
FIXED-IN: 2.8.1

M  +4    -9    src/kdefrontend/MainWin.cpp
M  +3    -1    src/kdefrontend/MainWin.h

https://invent.kde.org/education/labplot/commit/373fc93e1fb4d9a7b925807d3406d84447679d38