Fix full screen action

BUG: 428813
FIXED-IN: 2.8.1